# crop-image-python

./: README.md  pyproject.toml
crop_image/: __main__.py  _imgutils.py  core.py
