[tool.poetry]
authors = ["Cologler <skyoflw@gmail.com>"]
description = ""
license = "MIT"
name = "crop-image"
readme = "README.md"
version = "0.1.0"

[tool.poetry.scripts]
crop-image = "crop_image.core:app"

[tool.poetry.dependencies]
pillow = "^11.0.0"
python = "^3.12"
typer = {extras = ["all"], version = "^0.12.5"}

[tool.poetry-dynamic-versioning]
enable = true

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
